<resources>
    <string name="app_name">Memory</string>

    <string name="winner_popup">Winner!\nScore:\u0020</string>

    <string name="menu_new">New Game</string>
    <string name="menu_matches">Matches:</string>
    <string name="menu_score">Best Scores</string>
    <string name="menu_about">Show About</string>
    <string name="menu_help">Show Help</string>

    <string name="title_about">About Memory</string>
    <string name="title_help">Help Memory</string>

    <string name="msg_about">Running version:\u0020</string>
    <string name="url_help">https://github.com/TampaBayAndroid/Memory</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="best_score">Show Best Scores</string>
    <string name="rank">Rank</string>
    <string name="score">Score</string>
    <string name="matches">Matches</string>
    <string name="guesses">Guesses</string>
    <string name="time">Time</string>

    <string name="splash_image">Splash Image</string>
</resources>
