<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_new"
        android:icon="@drawable/ic_action_replay"
        android:title="@string/menu_new"
        android:orderInCategory="1"
        android:showAsAction="always|withText" />

    <item
        android:id="@+id/menu_matches"
        android:actionLayout="@layout/matches"
        android:title="@string/menu_matches"
        android:orderInCategory="2"
        android:showAsAction="always" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="11"
        android:showAsAction="never" />

    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help"
        android:orderInCategory="12"
        android:showAsAction="never" />

</menu>
